--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.10",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
