--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "gsap": "^3.13.0",
